data/diff_tests/wasmtime/call_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3846.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\01\7f\01\7f\60\00\00\02\95\80\80\80\00\01\03\65"
    "\6e\76\0d\65\78\74\65\72\6e\61\6c\5f\66\75\6e\63"
    "\00\00\03\82\80\80\80\00\01\01\0a\98\80\80\80\00"
    "\01\92\80\80\80\00\01\01\7f\02\40\03\40\41\01\10"
    "\00\21\00\0c\00\0b\0b\0b"
  )
""
)